Add item to "Things to discuss"

--- a/march-9-2015.md
+++ b/march-9-2015.md
@@ -3,3 +3,4 @@
 ## Things to discuss
 
 * Do we want to have a shared workplace that people can just come in and work on whatever they want?
+* Let everybody know about this Meeting-Summaries repository, discuss ideas for it
