Add item to "Things to discuss" for 2015-03-09

--- a/march-9-2015.md
+++ b/march-9-2015.md
@@ -4,3 +4,4 @@
 
 * Do we want to have a shared workplace that people can just come in and work on whatever they want?
 * Let everybody know about this Meeting-Summaries repository, discuss ideas for it
+* Open the Open-source Project Poll Google Doc, go through what people have written down
