Update March 9 meeting summary

--- a/march-9-2015.md
+++ b/march-9-2015.md
@@ -1,7 +1,15 @@
-**This is for an upcoming meeting**
+## Administrative things
 
-## Things to discuss
+* Since several people have expressed an interest, we will try to reserve an open workspace for certain times each week so people can come in and hack on whatever they want.
 
-* Do we want to have a shared workplace that people can just come in and work on whatever they want?
-* Let everybody know about this Meeting-Summaries repository, discuss ideas for it
-* Open the Open-source Project Poll Google Doc, go through what people have written down
+* This repository will be used to store weekly meeting summaries, so anyone can modify them.
+
+* [This Google Doc](https://docs.google.com/spreadsheets/d/1CFEVYVSfB491EiVrOoUB1gbWaY40onnpCeyjvDxZW0A/edit#gid=0) shows the projects that our club members are working on.  Please add your projects there if you haven't done so.
+
+* If you are interested in helping with the Linux Installfest which is going to happen on March 20, please shoot an email to Patrick (pmn25@cornell.edu).
+
+## Introduction to Rust
+
+Derek gave a lightning talk on some of the most interesting features of [Rust](http://www.rust-lang.org/), a new programming language.  The code examples he used can be found [here](https://github.com/OpenSourceCornell/Introduction-to-Rust-code-examples-).
+
+You can learn more about Rust on their [official website](http://www.rust-lang.org/).
