--- a/march-16-2015.md
+++ b/march-16-2015.md
@@ -6,4 +6,4 @@
 
 ## NodeJS
 
-Kevin gave a talk about NodeJS and JavaScript.  His slides have been uploaded [here](https://github.com/OpenSourceCornell/Meeting-Summaries/blob/master/Nodejs%20slides%20by%20Kevin%20%28used%20on%20March%2016%29.pdf).  You can upload the slides by pressing the "Raw" button.
+Kevin gave a talk about NodeJS and JavaScript.  His slides have been uploaded [here](https://github.com/OpenSourceCornell/Meeting-Summaries/blob/master/Nodejs%20slides%20by%20Kevin%20%28used%20on%20March%2016%29.pdf).  You can download the slides by pressing the "Raw" button.
