--- a/march-23-2015.md
+++ b/march-23-2015.md
@@ -6,6 +6,8 @@ We had some trouble finding a place.  Patrick will send out an email as soon as 
 
 Please refer to the CMS google group.  It's not too late to join!  Shoot an email to Derek (ej222) if you have any questions.
 
+The brainstorming doc is here: https://docs.google.com/document/d/1SUeirvMGGa1I48aiC2JjaxD4SupGQsK7u1HUaxsJkpA/edit?usp=sharing
+
 ## SymPy
 
 David Li gave a talk about [SymPy](http://www.sympy.org/en/index.html).  He walked through the major features and talked about how to contribute to the project.  He will upload the slides/code he used to this repo.
