Add link to notebook to meeting summary for March 23

--- a/march-23-2015.md
+++ b/march-23-2015.md
@@ -10,4 +10,6 @@ The brainstorming doc is here: https://docs.google.com/document/d/1SUeirvMGGa1I4
 
 ## SymPy
 
-David Li gave a talk about [SymPy](http://www.sympy.org/en/index.html).  He walked through the major features and talked about how to contribute to the project.  He will upload the slides/code he used to this repo.
+David Li gave a talk about [SymPy](http://www.sympy.org/en/index.html).  He walked through the major features and talked about how to contribute to the project.
+
+The Jupyter/IPython Notebook used can be found [in this repository](https://github.com/OpenSourceCornell/Meeting-Summaries/blob/master/march-23-2015-lightning-talk-sympy.ipynb). They can be [viewed online](http://nbviewer.ipython.org/github/OpenSourceCornell/Meeting-Summaries/blob/master/march-23-2015-lightning-talk-sympy.ipynb) via nbviewer.
