Correct notes about Installfest.

--- a/march-23-2015.md
+++ b/march-23-2015.md
@@ -1,6 +1,6 @@
 ## Installfest
 
-We had some trouble finding a place.  Patrick will send out an email as soon as the logistics are settled.
+We had some trouble getting a room booked in time.  Patrick will send out an email as soon as the logistics are settled.
 
 ## CMS
 
